# namada-generator

./: Cargo.toml
src/: main.rs
